<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_temperature"
        android:icon="@drawable/baseline_thermostat_24"
        android:title="@string/title_temperature" />

    <item
        android:id="@+id/navigation_mass"
        android:icon="@drawable/baseline_scale_24"
        android:title="@string/title_mass" />

    <item
        android:id="@+id/navigation_length"
        android:icon="@drawable/baseline_height_24"
        android:title="@string/title_length" />

    <item
        android:id="@+id/navigation_area"
        android:icon="@drawable/baseline_grid_4x4_24"
        android:title="@string/title_area" />

    <item
        android:id="@+id/navigation_volume"
        android:icon="@drawable/baseline_layers_24"
        android:title="@string/title_volume" />
</menu>