<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_temperature">

    <fragment
        android:id="@+id/navigation_temperature"
        android:name="com.example.unit_converter.ui.temperature.TemperatureFragment"
        android:label="@string/title_temperature"
        tools:layout="@layout/fragment_temperature" />

    <fragment
        android:id="@+id/navigation_mass"
        android:name="com.example.unit_converter.ui.mass.MassFragment"
        android:label="@string/title_mass"
        tools:layout="@layout/fragment_mass" />

    <fragment
        android:id="@+id/navigation_length"
        android:name="com.example.unit_converter.ui.length.LengthFragment"
        android:label="@string/title_length"
        tools:layout="@layout/fragment_length" />

    <fragment
        android:id="@+id/navigation_area"
        android:name="com.example.unit_converter.ui.area.AreaFragment"
        android:label="@string/title_area"
        tools:layout="@layout/fragment_area" />

    <fragment
        android:id="@+id/navigation_volume"
        android:name="com.example.unit_converter.ui.volume.VolumeFragment"
        android:label="@string/title_volume"
        tools:layout="@layout/fragment_volume" />

</navigation>