<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/areaContainer"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingLeft="8dp"
    android:paddingRight="8dp"
    android:paddingBottom="100dp"
    android:visibility="visible">

    <TextView
        android:id="@+id/text_area"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_weight="1"
        android:textAlignment="center"
        android:textSize="20sp"
        android:visibility="visible" />

    <LinearLayout
        android:id="@+id/inputLayout"
        android:layout_width="match_parent"
        android:layout_height="651dp"
        android:layout_weight="5"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingLeft="0dp"
        android:paddingRight="0dp"
        android:visibility="visible">

        <LinearLayout
            android:id="@+id/inputMetricLayout"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@drawable/metric_long"
            android:backgroundTintMode="multiply"
            android:backgroundTint="@color/material_on_primary_disabled"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingLeft="4dp"
            android:paddingRight="4dp">

            <EditText
                android:id="@+id/InputMetricSquareMeter"
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:autofillHints="Number"
                android:ems="10"
                android:hint="@string/input_area_square_centimeter"
                android:inputType="numberSigned|number|numberDecimal"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textColorHint="#757575"
                android:textSize="16sp"
                android:visibility="visible" />

            <EditText
                android:id="@+id/InputMetricDunam"
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:autofillHints="Number"
                android:ems="10"
                android:hint="@string/input_area_dunam"
                android:inputType="numberSigned|number|numberDecimal"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textColorHint="#757575"
                android:textSize="16sp"
                android:visibility="visible" />

            <EditText
                android:id="@+id/InputMetricSquareKiloMeter"
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:autofillHints="Number"
                android:ems="10"
                android:hint="@string/input_area_square_kilometer"
                android:inputType="numberSigned|number|numberDecimal"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textColorHint="#757575"
                android:textSize="16sp"
                android:visibility="visible" />


        </LinearLayout>

        <LinearLayout
            android:id="@+id/inputUsaLayout"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@drawable/usa_long"
            android:backgroundTintMode="multiply"
            android:backgroundTint="@color/material_on_primary_disabled"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingLeft="4dp"
            android:paddingRight="4dp">

            <EditText
                android:id="@+id/InputUsaSquareInch"
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:autofillHints="Number"
                android:ems="10"
                android:hint="@string/input_area_square_inch"
                android:inputType="numberSigned|number|numberDecimal"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textColorHint="#757575"
                android:textSize="16sp"
                android:visibility="visible" />
            <EditText
                android:id="@+id/InputUsaSquareFoot"
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:autofillHints="Number"
                android:ems="10"
                android:hint="@string/input_area_square_foot"
                android:inputType="numberSigned|number|numberDecimal"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textColorHint="#757575"
                android:textSize="16sp"
                android:visibility="visible" />

            <EditText
                android:id="@+id/InputUsaSquareYard"
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:autofillHints="Number"
                android:ems="10"
                android:hint="@string/input_area_square_yard"
                android:inputType="numberSigned|number|numberDecimal"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textColorHint="#757575"
                android:textSize="16sp"
                android:visibility="visible" />

            <EditText
                android:id="@+id/InputUsaAcre"
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:autofillHints="Number"
                android:ems="10"
                android:hint="@string/input_area_acre"
                android:inputType="numberSigned|number|numberDecimal"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textColorHint="#757575"
                android:textSize="16sp"
                android:visibility="visible" />

            <EditText
                android:id="@+id/inputUsaSquareMile"
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:autofillHints="Number"
                android:ems="10"
                android:hint="@string/input_area_square_mile"
                android:inputType="numberSigned|number|numberDecimal"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textColorHint="#757575"
                android:textSize="16sp"
                android:visibility="visible" />


        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/clearButton"
        android:layout_width="80dp"
        android:layout_height="60dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:text="@string/clear_button_text"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:visibility="visible" />

</LinearLayout>