<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/volumeContainer"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingLeft="8dp"
    android:paddingRight="8dp"
    android:paddingBottom="100dp"
    android:visibility="visible">

    <TextView
        android:id="@+id/text_volume"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_weight="1"
        android:textAlignment="center"
        android:textSize="20sp"
        android:visibility="visible" />

    <LinearLayout
        android:id="@+id/inputLayout"
        android:layout_width="match_parent"
        android:layout_height="651dp"
        android:layout_weight="5"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingLeft="0dp"
        android:paddingRight="0dp"
        android:visibility="visible">

        <LinearLayout
            android:id="@+id/inputMetricLayout"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingLeft="4dp"
            android:paddingRight="4dp">

            <ImageView
                android:id="@+id/soccer6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/soccer"
                app:srcCompat="@drawable/two_tone_sports_soccer_24" />

            <EditText
                android:id="@+id/InputMetricMilliLiter"
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:autofillHints="Number"
                android:ems="10"
                android:hint="@string/input_volume_milliliter"
                android:textAlignment="center"
                android:inputType="numberSigned|number|numberDecimal"
                android:imeOptions="actionDone"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textColorHint="#757575"
                android:textSize="16sp"
                android:visibility="visible" />

            <EditText
                android:id="@+id/InputMetricLiter"
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:autofillHints="Number"
                android:ems="10"
                android:hint="@string/input_volume_liter"
                android:textAlignment="center"
                android:inputType="numberSigned|number|numberDecimal"
                android:imeOptions="actionDone"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textColorHint="#757575"
                android:textSize="16sp"
                android:visibility="visible" />

            <ImageView
                android:id="@+id/soccer10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/soccer"
                app:srcCompat="@drawable/two_tone_sports_soccer_24" />

            <!--            <ImageView-->
<!--                android:id="@+id/soccer7"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:contentDescription="@string/soccer"-->
<!--                android:src="@drawable/two_tone_sports_soccer_24"-->
<!--                android:visibility="invisible" />-->

<!--            <EditText-->
<!--                android:id="@+id/InputMetricSquareKiloLiter"-->
<!--                android:layout_width="150dp"-->
<!--                android:layout_height="50dp"-->
<!--                android:layout_marginStart="10dp"-->
<!--                android:layout_marginTop="10dp"-->
<!--                android:layout_marginEnd="10dp"-->
<!--                android:layout_marginBottom="10dp"-->
<!--                android:autofillHints="Number"-->
<!--                android:ems="10"-->
<!--                android:hint="@string/input_volume_kiloliter"-->
<!--                android:inputType="numberSigned|number|numberDecimal"
                android:imeOptions="actionDone"-->
<!--                android:textAppearance="@style/TextAppearance.AppCompat.Small"-->
<!--                android:textColorHint="#757575"-->
<!--                android:textSize="16sp"-->
<!--                android:visibility="invisible" />-->


        </LinearLayout>

        <LinearLayout
            android:id="@+id/inputUsaLayout"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingLeft="4dp"
            android:paddingRight="4dp">

            <ImageView
                android:id="@+id/football11"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/football"
                app:srcCompat="@drawable/two_tone_sports_football_24" />

            <EditText
                android:id="@+id/InputUsaFluidOunce"
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:autofillHints="Number"
                android:ems="10"
                android:hint="@string/input_volume_fluid_ounce"
                android:textAlignment="center"
                android:inputType="numberSigned|number|numberDecimal"
                android:imeOptions="actionDone"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textColorHint="#757575"
                android:textSize="16sp"
                android:visibility="visible" />

            <EditText
                android:id="@+id/InputUsaCup"
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:autofillHints="Number"
                android:ems="10"
                android:hint="@string/input_volume_us_cup"
                android:textAlignment="center"
                android:inputType="numberSigned|number|numberDecimal"
                android:imeOptions="actionDone"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textColorHint="#757575"
                android:textSize="16sp"
                android:visibility="visible" />

            <EditText
                android:id="@+id/InputUsaPint"
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:autofillHints="Number"
                android:ems="10"
                android:hint="@string/input_volume_us_pint"
                android:textAlignment="center"
                android:inputType="numberSigned|number|numberDecimal"
                android:imeOptions="actionDone"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textColorHint="#757575"
                android:textSize="16sp"
                android:visibility="visible" />

            <EditText
                android:id="@+id/InputUsaQuart"
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:autofillHints="Number"
                android:ems="10"
                android:hint="@string/input_volume_us_quart"
                android:textAlignment="center"
                android:inputType="numberSigned|number|numberDecimal"
                android:imeOptions="actionDone"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textColorHint="#757575"
                android:textSize="16sp"
                android:visibility="visible" />

            <EditText
                android:id="@+id/InputUsaGallon"
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:autofillHints="Number"
                android:ems="10"
                android:hint="@string/input_volume_us_gallon"
                android:textAlignment="center"
                android:inputType="numberSigned|number|numberDecimal"
                android:imeOptions="actionDone"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textColorHint="#757575"
                android:textSize="16sp"
                android:visibility="visible" />

            <ImageView
                android:id="@+id/football14"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/football"
                app:srcCompat="@drawable/two_tone_sports_football_24" />


        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/clearButton"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:visibility="visible"
        android:background="@drawable/two_tone_delete_black_48"
        />

</LinearLayout>